<resources>
    <string name="app_name">Music School App 2016</string>
    <string name="which_instrument_txt">Which instrument do you want to learn to play?</string>

    <string name="txtAccordion">Accordion</string>
    <string name="txtBassoon">Bassoon</string>
    <string name="txtCello">Cello</string>

    <string name="btnShowDetails">Show Details</string>

    <string name="txtLessionStartQuestion">When do you want to start?</string>
    <string name="responseText">You have enrolled for %1$2s lessons in %2$2s</string>
    <string name="splashScreenRes">Splash Screen Logo</string>

    <string-array name="monthsStart">
        <item>Janurary</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string name="enroll_question_title">Are you sure?</string>
    <string name="enroll_question">Are you sure you want to enroll for %1$s lessons, starting in %2$s?</string>

    <string name="btnYes">YES</string>
    <string name="btnNo">NO</string>

</resources>
