<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bit.hawkhje1.musicschoolapp.MainActivity"
    android:padding="0dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/question_txt_height"
            android:text="@string/which_instrument_txt"
            android:id="@+id/tbxQuestionText"
            android:gravity="center|center_vertical"
            android:background="#1d4d90"
            android:textColor="#ffffff" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:id="@+id/rbtnGroupInstruments">

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="@dimen/radio_button_height"
                android:text="@string/txtAccordian"
                android:id="@+id/rbtnAccordian"
                android:checked="true" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/radio_button_height"
                android:text="@string/txtBassoon"
                android:id="@+id/rbtnBassoon" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/radio_button_height"
                android:text="@string/txtCello"
                android:id="@+id/rbtnCello" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtLessionStartQuestion"
            android:id="@+id/txtLessionStartQuestion"
            android:layout_gravity="center_horizontal"
            android:gravity="center|center_vertical"
            android:height="@dimen/question_txt_height"
            android:textColor="#ffffff"
            android:background="#484848" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerMonthStart"
            android:layout_gravity="center_horizontal"
            android:theme="@style/AppTheme" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:text="@string/btnShowDetails"
            android:id="@+id/btnShowInstrument" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/response_txt_height"
            android:text="@string/responseText"
            android:id="@+id/txtResponse"
            android:gravity="center|center_vertical"
            android:visibility="invisible" />

    </LinearLayout>

</RelativeLayout>
