<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bit.hawkhje1.musicschoolapp.DialogFragment"
    android:padding="0dp"
    android:background="#232323">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/enroll_question"
            android:id="@+id/txtEnrollQuestion"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#d5d5d5" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:showDividers="middle"
            android:orientation="horizontal"
            android:shrinkColumns="*">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:touchscreenBlocksFocus="false"
                android:orientation="horizontal"
                android:nestedScrollingEnabled="false"
                android:baselineAligned="false">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnYes"
                    android:id="@+id/btnYes"
                    android:layout_gravity="center_horizontal"
                    android:background="#464646"
                    android:textColor="@android:color/white"
                    android:width="200sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnNo"
                    android:id="@+id/btnNo"
                    android:background="#474747"
                    android:layout_marginLeft="3sp"
                    android:textColor="@android:color/white"
                    android:width="200sp" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

</RelativeLayout>
